--- a/aulafacear/pom.xml
+++ b/aulafacear/pom.xml
@@ -62,7 +62,12 @@
 		<dependency>
 			<groupId>com.sun.jersey</groupId>
 			<artifactId>jersey-server</artifactId>
-			<version>1.19.4</version>
+			<version>1.2</version>
+		</dependency>
+		<dependency>
+			<groupId>com.owlike</groupId>
+			<artifactId>genson</artifactId>
+			<version>0.99</version>
 		</dependency>
 		<dependency>
 			<groupId>com.sun.faces</groupId>
