--- a/sistemaacademico201803/pom.xml
+++ b/sistemaacademico201803/pom.xml
@@ -36,7 +36,11 @@
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-validator</artifactId>
 			<version>4.2.0.Final</version>
-			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>io.swagger</groupId>
+			<artifactId>swagger-jersey-jaxrs</artifactId>
+			<version>1.5.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
@@ -49,11 +53,6 @@
 			<artifactId>h2</artifactId>
 			<version>1.4.196</version>
 			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.sun.jersey</groupId>
-			<artifactId>jersey-server</artifactId>
-			<version>1.2</version>
 		</dependency>
 		<dependency>
 			<groupId>com.owlike</groupId>
